--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "author": "Thierry Deo <thierry.deo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "build": "webpack --mode=production",
+    "start": "webpack-dev-server --mode=development"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2"
   },
   "devDependencies": {
