--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=development"
+    "start": "webpack-dev-server --mode=development",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.3.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "webpack": "^4.16.5",
