--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "build": "webpack --mode=production",
     "start": "webpack-dev-server --mode=development",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .json --ext .js --ext .jsx"
   },
   "dependencies": {
+    "konva": "^2.2.1",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-konva": "^1.7.12",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1"
   },
@@ -21,13 +23,17 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
+    "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
