--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "git@github.com:tdeo/tdeo.github.io.git",
   "author": "Thierry Deo <thierry.deo@gmail.com>",
   "license": "MIT",
+  "homepage": "http://tdeo.github.io",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "build": "webpack --mode=production",
     "start": "webpack-dev-server --mode=development",
     "lint": "eslint . --ext .json --ext .js --ext .jsx"
@@ -31,6 +34,7 @@
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "style-loader": "^0.22.1",
