--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "homepage": "http://tdeo.github.io",
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
-    "build": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=development",
     "lint": "eslint . --ext .json --ext .js --ext .jsx"
   },
   "dependencies": {
@@ -37,9 +39,7 @@
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "style-loader": "^0.22.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "react-scripts": "^1.1.4",
+    "style-loader": "^0.22.1"
   }
 }
