--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^16.4.2",
     "react-konva": "^1.7.12",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "recharts": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
