Add cancel function for Numbers

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "yarn lint && yarn build",
     "deploy": "gh-pages -d build -b master",
     "lint": "eslint . --ext .json --ext .js --ext .jsx"
   },
