--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-konva": "^1.7.12",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "react-shortcuts": "^2.0.0",
     "recharts": "^1.1.0"
   },
   "devDependencies": {
