More linter settings + timer in numbers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,45 @@
 {
-  "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
-  "plugins": ["json"],
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
-  ]
+    "plugin:react/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
+  "parser": "babel-eslint",
+  "plugins": [
+    "json",
+    "import"
+  ],
+  "rules": {
+    "brace-style": [2, "1tbs", { "allowSingleLine": false }],
+    "curly": [2, "all"],
+    "eol-last": [2, "always"],
+    "import/order": ["error", {"newlines-between": "always"}],
+    "indent": [2, 2, { "SwitchCase": 1, "VariableDeclarator": 1 }],
+    "keyword-spacing": [2, { "after": true, "before": true }],
+    "linebreak-style": [2, "unix"],
+    "no-console": ["error"],
+    "no-empty": 0,
+    "no-trailing-spaces": 1,
+    "object-curly-spacing": [2, "always"],
+    "quotes": [2, "single"],
+    "semi": [2,"always"],
+    "space-in-parens": [2, "never"],
+    "space-infix-ops": 2
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    }
+  }
 }
