--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn lint && yarn build",
     "deploy": "gh-pages -d build -b master",
-    "lint": "eslint . --ext .json --ext .js --ext .jsx"
+    "lint": "eslint . --ext .json --ext .js --ext .jsx --fix"
   },
   "dependencies": {
     "konva": "^2.2.1",
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
