--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "javascript-blowfish": "agorlov/javascript-blowfish",
     "konva": "^2.2.1",
+    "query-string": "^6.1.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-typeahead": "^3.2.3",
