--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "lint": "eslint . --ext .json --ext .js --ext .jsx --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-brands-svg-icons": "^5.3.1",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "axios": "^0.18.0",
     "konva": "^2.2.1",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-typeahead": "^3.2.3",
     "react-dom": "^16.4.2",
     "react-konva": "^1.7.12",
     "react-router-bootstrap": "^0.24.4",
