--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@sentry/browser": "^4.2.3",
     "axios": "^0.18.0",
     "javascript-blowfish": "agorlov/javascript-blowfish",
     "konva": "^2.2.1",
