--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn lint && yarn build",
     "deploy": "gh-pages -d build -b master",
+    "favicon": "convert -background none -density 600 public/favicon.svg -resize 256x256 public/favicon.ico",
     "lint": "eslint . --ext .json --ext .js --ext .jsx --fix"
   },
   "dependencies": {
