--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@sentry/browser": "^4.2.3",
     "axios": "^0.18.0",
     "javascript-blowfish": "agorlov/javascript-blowfish",
-    "konva": "^2.2.1",
+    "konva": "^3.3.3",
     "query-string": "5",
-    "react": "^16.4.2",
-    "react-bootstrap": "^0.32.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "0.32.4",
     "react-bootstrap-typeahead": "^3.2.3",
-    "react-dom": "^16.4.2",
-    "react-konva": "^1.7.12",
+    "react-dom": "^16.8.6",
+    "react-konva": "16.8.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-shortcuts": "^2.0.0",
@@ -38,8 +38,6 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -52,7 +50,19 @@
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^3.0.1",
     "style-loader": "^0.22.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
