--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "0.32.4",
     "react-bootstrap-typeahead": "^3.2.3",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-konva": "16.8.6",
     "react-router-bootstrap": "^0.24.4",
