--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run lint && npm run build",
     "deploy": "gh-pages -d build -b master",
-    "favicon": "convert -background none -density 600 public/favicon.svg -resize 256x256 public/favicon.ico",
+    "favicon": "convert -background none -density 100 public/favicon.svg -resize 256x256 public/favicon.ico",
     "lint": "eslint . --ext .json --ext .js --ext .jsx --fix"
   },
   "dependencies": {
@@ -31,27 +31,23 @@
     "react-bootstrap-typeahead": "^3.2.3",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
-    "react-konva": "16.8.6",
+    "react-konva": "^16.9.0-0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
-    "react-shortcuts": "^2.0.0",
+    "react-shortcuts": "^2.0.1",
     "recharts": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.1.1",
     "style-loader": "^0.22.1"
   },
   "browserslist": {
