Install build dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run a multi-line script
       run: |
-        npm install --production
+        npm install
         npm run build
         gh-pages -d build -b master
