--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - name: Setup node
+      uses: actions/setup-node@v1
       with:
         node-version: '10.x'
     - name: Run a multi-line script
       run: |
         yarn install
-        yarn deploy
+        yarn build
+    - name: Deploy to github pages
+      uses: maxheld83/ghpages@v0.2.1
+      with:
+        BUILD_DIR: build/
