--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "no-trailing-spaces": 1,
     "object-curly-spacing": [2, "always"],
     "quotes": [2, "single"],
+    "react/prop-types": [0],
     "semi": [2,"always"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2
