--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-shortcuts": "^2.0.1",
-    "recharts": "^1.1.0"
+    "recharts": "^1.1.0",
+    "websocket": "^1.0.29"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
