--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
     - name: Build assets
       run: yarn build
     - name: Deploy to github pages
+      env:
+        GIT_AUTHOR_NAME: Thierry Deo
+        GIT_AUTHOR_EMAIL: thierry.deo@gmail.com
+        GIT_COMMITTER_NAME: Thierry Deo
+        GIT_COMMITTER_EMAIL: thierry.deo@gmail.com
+        EMAIL: thierry.deo@gmail.com
       run: |
         yarn exec gh-pages -- \
           -r https://tdeo:${{ secrets.GH_PAT }}@github.com/tdeo/tdeo.github.io.git \
