--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
         EMAIL: thierry.deo@gmail.com
       run: |
         yarn exec gh-pages -- \
-          -r https://tdeo:${{ secrets.GH_PAT }}@github.com/tdeo/tdeo.github.io.git \
+          -r https://tdeo:${{ secrets.GH_PAT }}@github.com/tdeo/tdeo.github.io \
           -d build \
           -b master
