--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-      fetch-depth: 1
+      with:
+        fetch-depth: 1
     - name: Setup node
       uses: actions/setup-node@v1
       with:
